--- a/login.html
+++ b/login.html
@@ -5,16 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/HTML/style.css">
 </head>
 <body>
-    <header>
-        <h1>Login</h1>
-    </header>
-    <form>
-        <label>Username</label>
-        <input type="text">
-        <label>Password</label>
-        <input type="text">
-    </form>
+    <div class="loginBody">
+        <header id="loginHeader">
+            <h1 id="sitename">Welcome to my site</h1>
+            <a href="/HTML/login.html" id="login">Login</a>
+            <nav id="navbar">
+                <ul>
+                    <li><a href="/HTML/index.html">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </nav>
+        </header>
+        <div class="container">
+            <h2 id="loginHeader2">Login here</h2>
+            <form>
+                <label>Username</label>
+                <input type="text">
+                <label>Password</label>
+                <input type="text">
+            </form>
+        </div>
+        <footer>
+            <p>Copyright &copy; 2022, My Website</p>
+        </footer>
+    </div>
 </body>
 </html>
